fix: fix about page controls btns visibility whis z-index

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -21,7 +21,7 @@
   -moz-column-gap: 20px;
        column-gap: 20px;
   margin-bottom: 40px;
-  z-index: 10;
+  z-index: 2;
 }
 .about-btn {
   padding: 15px;
